--- a/Pipfile
+++ b/Pipfile
@@ -8,8 +8,13 @@ jupyter = "*"
 numpy = "*"
 matplotlib = "*"
 more-itertools = "*"
+aiohttp = "*"
+jinja2 = "*"
+aiohttp-jinja2 = "*"
+typing-extensions = "*"
 
 [dev-packages]
+flake8 = "*"
 
 [requires]
 python_version = "3.8"
